--- a/index.html
+++ b/index.html
@@ -5,22 +5,11 @@
 </head>
 <body>
 	<script>
-		var nome = "Diego"; //Variável nome recebendo uma string 
-		var idade = 23;  //Variável idade recebendo um number 
-		var peso = 80.5; //Variável peso recebendo um float 
-		var humano = true; //Variável humano recebendo boolean
+		var x = 10, y = 5;
 
-		var alunos = ['Diego', 'Gabriel', 'Lucas']; ////Variável alunos recebendo um array de strings
+		x *= y; //é a mesma coisa que isto -> x = x + 3
 
-		var aluno = { //Variável aluno um objeto com várias características
-			nome: alunos[2],
-			idade: 23,
-			peso: 80.5,
-			humano: true
-		};
-
-		console.log(alunos[1]); //Printando na tela a posição 1 do array de alunos
-		console.log(aluno.nome); //Printando na tela a característica nome da variável aluno que é um objeto
+		console.log(x)
 	</script>
 
 </body>
