--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 	<script>
-		//AND, OR, NOT
+		//Condição ternária se aplica se tem apenas 2 verificações dentro do if
+		//? se for isso faça : se não
 
 		var sexo = 'M';
 
-		var masculino = sexo == 'M';
-
-		console.log(masculino);
+		var retorno = (sexo === 'M') ? 'Masculino' : 'Feminino';
+		console.log(retorno);
 	</script>
 
 </body>
