Estruturas de repetição

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
 </head>
 <body>
 	<script>
-		//Condição ternária se aplica se tem apenas 2 verificações dentro do if
-		//? se for isso faça : se não
+		//for foreach
+		//while
 
-		var sexo = 'M';
+		// for (var i = 0; i <=100; i++){ //Ele sempre vai incrementando mais 1 até ser menor ou igual a 100
+		// 	console.log(i);
+		// }
 
-		var retorno = (sexo === 'M') ? 'Masculino' : 'Feminino';
-		console.log(retorno);
+		var j = 38948329482; //enquanto nao for aquele valor ele vai continuar rodando
+		while (j > 50){
+			console.log(j);
+
+			j /= 5;
+		}
 	</script>
 
 </body>
