--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
 </head>
 <body>
 	<script>
-		//for foreach
-		//while
-
-		// for (var i = 0; i <=100; i++){ //Ele sempre vai incrementando mais 1 até ser menor ou igual a 100
-		// 	console.log(i);
-		// }
-
-		var j = 38948329482; //enquanto nao for aquele valor ele vai continuar rodando
-		while (j > 50){
-			console.log(j);
-
-			j /= 5;
+		function exibeAlgo(){
+			console.log('Hello World');
 		}
+
+		// setInterval(exibeAlgo, 1000); //Executa a cada 1 segunndo
+		setTimeout(exibeAlgo, 5000); //Executa com um delay de cada 5 segundos
 	</script>
 
 </body>
